FASM How to set pixels.

--- a/program.htm
+++ b/program.htm
@@ -707,6 +707,13 @@ Flat Assembler (FASM)</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/win32_scrollbar.htm">
         Set ScrollBar</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>Painting</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_pixel.htm">
+            Set Pixel</a><br>
 <br><br><br><br>
 
 <div id="wine"></div>
