--- a/program/fasm/win32_keyboard.htm
+++ b/program/fasm/win32_keyboard.htm
@@ -124,17 +124,17 @@ proc WndProc hWnd, uMsg, wParam, lParam
     invoke wsprintf, buf, fmt, [wParam]
     invoke SetWindowText, [hWnd], buf
     xor eax, eax
-    ret
+    jmp .finish
 
 .handle_close:
     invoke DestroyWindow, [hWnd]
     xor eax, eax
-    ret
+    jmp .finish
  
 .handle_destroy:
     invoke PostQuitMessage, 0
     xor eax, eax
-    ret
+    jmp .finish
   
 .finish:
     ret
