--- a/program/fasm/win32_timer.htm
+++ b/program/fasm/win32_timer.htm
@@ -110,18 +110,18 @@ proc WndProc hWnd, uMsg, wParam, lParam
     invoke wsprintf, buf, fmt, [cnt]
     invoke SetWindowText, [hWnd], buf
     xor eax, eax
-    ret
+    jmp .finish
   
 .handle_close:
     invoke DestroyWindow, [hWnd]
     xor eax, eax
-    ret
+    jmp .finish
    
 .handle_destroy:
     invoke KillTimer, [hWnd], 1
     invoke PostQuitMessage, 0
     xor eax, eax
-    ret
+    jmp .finish
     
 .finish:
     ret
