--- a/program/fasm/win32_dlg_event.htm
+++ b/program/fasm/win32_dlg_event.htm
@@ -99,12 +99,12 @@ proc WndProc hWnd, uMsg, wParam, lParam
 .handle_close:
     invoke DestroyWindow, [hWnd]
     xor eax, eax
-    ret
+    jmp .finish
 
 .handle_destroy:
     invoke PostQuitMessage, 0
     xor eax, eax
-    ret
+    jmp .finish
  
 .finish:
     ret
