--- a/program.htm
+++ b/program.htm
@@ -777,9 +777,9 @@ Wine</h3>
             <a href="program/wine/cpp_pixel.htm">
             Set Pixel</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_brush.htm">
-                Brush</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_brush.htm">
+            Create Brush</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_pen.htm">
