--- a/program/wine/cpp_brush.htm
+++ b/program/wine/cpp_brush.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog &gt;&gt; Painting</h3>
+<h3>Wine &gt;&gt; C/C++ &gt;&gt; Painting</h3>
 <p><b>Brush</b></p>
 <hr size="1">
 <p>
@@ -53,7 +53,7 @@
 2. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 3. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-當視窗需要重畫時，系統會透過發送WM_PAINT事件，讓callback進行處理，因此，可以在收到WM_PAINT事件時，繪製相關的圖像或者文字，而關於畫圖設定方面，可以分成Brush和Pen兩種設定，Brush代表填入的顏色，Pen則是線條的顏色<br><br>
+繪畫的顏色設定可以分成Brush、Pen兩種，Brush代表填充的顏色，Pen則是線條的顏色<br><br>
 
 main.c
 </p>
@@ -65,6 +65,10 @@ WNDPROC defWndProc = NULL;
 
 LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 {
+    HDC hdc = NULL;
+    HBRUSH brush = NULL;
+    PAINTSTRUCT ps = {0};
+
     switch (uMsg) {
     case WM_CLOSE:
         DestroyWindow(hWnd);
@@ -73,9 +77,8 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
         PostQuitMessage(0);
         return 0;
     case WM_PAINT:
-        PAINTSTRUCT ps = {0};
-        HDC hdc = BeginPaint(hWnd, &amp;ps);
-        HBRUSH brush = CreateSolidBrush(RGB(0xff, 0x00, 0x00));
+        hdc = BeginPaint(hWnd, &amp;ps);
+        brush = CreateSolidBrush(RGB(0xff, 0x00, 0x00));
         FillRect(hdc, &amp;ps.rcPaint, brush);
         EndPaint(hWnd, &amp;ps);
         DeleteObject(brush);
@@ -84,14 +87,11 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
     return CallWindowProc(defWndProc, hWnd, uMsg, wParam, lParam);
 }
 
-int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
-                   LPSTR lpCmdLine, int nCmdShow)
+int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine, int nCmdShow)
 {
-    hWin = CreateWindow(WC_DIALOG, "main", WS_OVERLAPPEDWINDOW, 0, 0, 300, 300,
-                        NULL, NULL, NULL, NULL);
-    defWndProc =
-        (WNDPROC)SetWindowLongPtr(hWin, GWLP_WNDPROC, (long int)WndProc);
-    ShowWindow(hWin, SW_SHOW);
+    hWin = CreateWindow(WC_DIALOG, "main", 
+        WS_OVERLAPPEDWINDOW | WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL);
+    defWndProc = (WNDPROC)SetWindowLongPtr(hWin, GWLP_WNDPROC, (long int)WndProc);
 
     MSG msg = {0};
     while (GetMessage(&amp;msg, NULL, 0, 0)) {
@@ -100,8 +100,12 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
     ExitProcess(0);
     return 0;
 }
-</pre><br>
+</pre>
 <p>
+<b>Line 21</b>：產生一個紅色的Brush<br>
+<b>Line 22</b>：將可視區域填入紅色<br>
+<b>Line 24</b>：釋放資源<br><br>
+
 編譯、執行
 </p>
 <pre>
@@ -109,7 +113,7 @@ $ winegcc main.c -o main -lgdi32
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_brush/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_brush/1.jpg" class="maxSize">
 </p>
 
 <p>
