--- a/program.htm
+++ b/program.htm
@@ -444,6 +444,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_pixel.htm">
             Set Pixel</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_brush.htm">
+            Create Brush</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
