NASMX How to create brush.

--- a/program.htm
+++ b/program.htm
@@ -493,6 +493,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_pixel.htm">
             Set Pixel</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_brush.htm">
+            Create Brush</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
