MASM32 How to create brush.

--- a/program.htm
+++ b/program.htm
@@ -575,6 +575,10 @@ Set ScrollBar</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/pixel.htm">
     Set Pixel</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/brush.htm">
+    Create  Brush</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
