--- a/program.htm
+++ b/program.htm
@@ -638,6 +638,10 @@ hello, world!</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/hla/win32_pixel.htm">
         Set Pixel</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_brush.htm">
+        Create Brush</a><br>
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
