--- a/program.htm
+++ b/program.htm
@@ -730,6 +730,11 @@ Flat Assembler (FASM)</h3>
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/fasm/win32_pixel.htm">
             Set Pixel</a><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_brush.htm">
+            Create Brush</a><br>
+
 <br><br><br><br>
 
 <div id="wine"></div>
