--- a/handheld/gpdwin/teardown.htm
+++ b/handheld/gpdwin/teardown.htm
@@ -110,7 +110,22 @@ PI3USB30532<br>
 <img src="teardown/20.jpg" class="maxSize"><br><br>
 
 LCD FPC<br>
-<img src="teardown/21.jpg" class="maxSize">
+<img src="teardown/21.jpg" class="maxSize"><br><br>
+
+前蓋<br>
+<img src="teardown/22.jpg" class="maxSize"><br><br>
+
+FPC<br>
+<img src="teardown/26.jpg" class="maxSize"><br><br>
+
+屏<br>
+<img src="teardown/23.jpg" class="maxSize"><br><br>
+
+Goodix GT911<br>
+<img src="teardown/24.jpg" class="maxSize"><br><br>
+
+FPC<br>
+<img src="teardown/25.jpg" class="maxSize">
 </p>
 
 <p>
