GPD Win2 Updated teardown images.

--- a/handheld/gpdwin2/teardown.htm
+++ b/handheld/gpdwin2/teardown.htm
@@ -49,67 +49,83 @@
 <p><b>拆機</b></p>
 <hr size="1">
 <p>
-基本上，司徒打從一開始就沒有想要拆解這台機器，因為這台機器的價格真的相當昂貴，而以司徒的經驗來看，被拆解後的機器，多數掛點，但是，不幸的事情剛好發生在司徒的這台掌機身上，那就是<b>闔上屏幕後，無法進入休眠狀態</b>以及<b>Wifi裝置常常不見的問題</b>，針對第一個問題，司徒還可以勉強接受，畢竟GPD Win掌機就有很多類似的問題，而司徒比較不能夠容忍的是掉Wifi這一個問題，因為就像當初Pandora掌機一樣，總是需要插入USB Wifi Dongle，白白浪費了一個USB孔位，而上網搜尋了一下，發現有一個硬體修復的方式，可以解決GPD Win2掌機掉Wifi的問題，於是司徒這才鼓起勇氣拆解這台掌機，看看是否有同樣的硬體問題，只是最終還是無解，因為司徒的機器已經有了這個硬體修復，不過，剛好有了這個機緣，司徒就順便整理這篇拆解文章。<br><br>
-
-拆開背後的螺絲<br>
-<img src="teardown/1.jpg" class="maxSize"><br><br>
-
-提取背蓋<br>
-<img src="teardown/2.jpg" class="maxSize"><br><br>
-
-PCB主板<br>
-<img src="teardown/3.jpg" class="maxSize"><br><br>
-
-Lontium LT7911C、iTE IT8110E、BQ715<br>
-<img src="teardown/4.jpg" class="maxSize"><br><br>
-
-Intel M3-7Y30、SEC K4E6E304EBEGFC、MPS1746、Intel 7265D2W<br>
-<img src="teardown/5.jpg" class="maxSize"><br><br>
-
-主板背面<br>
-<img src="teardown/6.jpg" class="maxSize"><br><br>
-
-EtronTech EJ898A、PI3USB 30532ZLE、AH1531 25Q64CW1G<br>
-<img src="teardown/7.jpg" class="maxSize"><br><br>
-
-HC3F042 CMW558Z02、SH61F83Q、ALC282<br>
-<img src="teardown/8.jpg" class="maxSize"><br><br>
-
-第二片PCB背面<br>
-<img src="teardown/9.jpg" class="maxSize"><br><br>
-
-喇叭<br>
-<img src="teardown/10.jpg" class="maxSize"><br><br>
-
-風扇<br>
-<img src="teardown/11.jpg" class="maxSize"><br><br>
-
-背面<br>
-<img src="teardown/12.jpg" class="maxSize"><br><br>
-
-M2插槽<br>
-<img src="teardown/13.jpg" class="maxSize"><br><br>
+展開<br>
+<img src="teardown/30.jpg" class="maxSize"><br><br>
 
 正面<br>
+<img src="teardown/1.jpg" class="maxSize"><br><br>
+
+底面<br>
+<img src="teardown/2.jpg" class="maxSize"><br><br>
+
+側面<br>
+<img src="teardown/3.jpg" class="maxSize"><br><br>
+
+R1~R3、USB Type-C、耳機孔、USB、MicroSD、Micro HDMI、R1~R3<br>
+<img src="teardown/4.jpg" class="maxSize"><br><br>
+
+側邊<br>
+<img src="teardown/5.jpg" class="maxSize"><br><br>
+
+SSD槽位、風扇<br>
+<img src="teardown/6.jpg" class="maxSize"><br><br>
+
+SSD 128GB<br>
+<img src="teardown/7.jpg" class="maxSize"><br>
+<img src="teardown/8.jpg" class="maxSize"><br><br>
+
+背蓋<br>
+<img src="teardown/9.jpg" class="maxSize"><br><br>
+
+拆開後<br>
+<img src="teardown/10.jpg" class="maxSize"><br><br>
+
+PCB<br>
+<img src="teardown/11.jpg" class="maxSize"><br>
+<img src="teardown/12.jpg" class="maxSize"><br><br>
+
+散熱片<br>
+<img src="teardown/13.jpg" class="maxSize"><br><br>
+
+L、R按鍵<br>
 <img src="teardown/14.jpg" class="maxSize"><br><br>
 
-官方預設搭載的128GB SSD<br>
-<img src="teardown/15.jpg" class="maxSize"><br><br>
-
-背面<br>
-<img src="teardown/16.jpg" class="maxSize"><br><br>
-
-電池<br>
+PCB<br>
+<img src="teardown/15.jpg" class="maxSize"><br>
+<img src="teardown/16.jpg" class="maxSize"><br>
 <img src="teardown/17.jpg" class="maxSize"><br><br>
 
-剩餘的東西<br>
-<img src="teardown/18.jpg" class="maxSize"><br><br>
-
-Wifi模組左上方的電阻，就是為了修復掉Wifi的問題<br>
+排線<br>
+<img src="teardown/18.jpg" class="maxSize"><br>
 <img src="teardown/19.jpg" class="maxSize"><br><br>
 
-其餘按鍵<br>
-<img src="teardown/20.jpg" class="maxSize">
+拆開後<br>
+<img src="teardown/20.jpg" class="maxSize"><br><br>
+
+按鍵、導電膠<br>
+<img src="teardown/21.jpg" class="maxSize"><br><br>
+
+原廠那個十字鍵真是無法使用，司徒要替換成要右邊這個<br>
+<img src="teardown/22.jpg" class="maxSize"><br>
+<img src="teardown/23.jpg" class="maxSize"><br><br>
+
+拆開後<br>
+<img src="teardown/24.jpg" class="maxSize"><br><br>
+
+IT8110E、LT7911C<br>
+<img src="teardown/25.jpg" class="maxSize"><br><br>
+
+Intel M3-7Y30、SEC K4E6E304EBEGFC、MP2939<br>
+<img src="teardown/26.jpg" class="maxSize"><br><br>
+
+Intel 7265D2W<br>
+<img src="teardown/27.jpg" class="maxSize"><br><br>
+
+AH1531 25Q64CW1G、PI3USB 30532ZLE、EtronTech EJ898A<br>
+<img src="teardown/28.jpg" class="maxSize"><br><br>
+
+HC3F042 CMW558Z02、SH61F83Q、ALC282<br>
+<img src="teardown/29.jpg" class="maxSize">
 </p>
 
 <p>
