--- a/program/wine/cpp_pen.htm
+++ b/program/wine/cpp_pen.htm
@@ -53,6 +53,8 @@
 2. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 3. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
+Pen可以想像成是一隻畫筆，粗細、顏色都可以設定，DC(Device Context)可以透過SelectObject()選擇畫筆<br><br>
+
 main.c
 </p>
 <pre class="brush:cpp">
@@ -100,8 +102,13 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
     ExitProcess(0);
     return 0;
 }
-</pre><br>
+</pre>
 <p>
+<b>Line 21</b>：創造一隻Pen，粗細是10，顏色則是紅色<br>
+<b>Line 22</b>：選擇要使用的Pen<br>
+<b>Line 23~24</b>：畫一條線<br>
+<b>Line 26</b>：刪除資源<br><br>
+
 編譯、執行
 </p>
 <pre>
