NASM How to use pen.

--- a/program.htm
+++ b/program.htm
@@ -448,6 +448,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_brush.htm">
             Create Brush</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_pen.htm">
+            Create Pen</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
