NASMX How to use pen.

--- a/program.htm
+++ b/program.htm
@@ -501,6 +501,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_brush.htm">
             Create Brush</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_pen.htm">
+            Create Pen</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
