MASM32 How to use pen.

--- a/program.htm
+++ b/program.htm
@@ -586,7 +586,11 @@ Set ScrollBar</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/brush.htm">
-    Create  Brush</a><br>
+    Create Brush</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/pen.htm">
+    Create Pen</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
