FASM How to use pen.

--- a/program.htm
+++ b/program.htm
@@ -752,6 +752,10 @@ Flat Assembler (FASM)</h3>
             <a href="program/fasm/win32_brush.htm">
             Create Brush</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_pen.htm">
+            Create Pen</a><br>
+
 <br><br><br><br>
 
 <div id="wine"></div>
