--- a/program/fasm/win32_brush.htm
+++ b/program/fasm/win32_brush.htm
@@ -212,7 +212,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" style="border:0px" src="../nasm/win32_brush/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_brush/1.jpg" class="maxSize">
 </p>
 
 <p>
