--- a/program/fasm/win32_dlg_window.htm
+++ b/program/fasm/win32_dlg_window.htm
@@ -150,7 +150,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" style="border:0px" src="../nasm/win32_dlg_window/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_dlg_window/1.jpg" class="maxSize">
 </p>
 
 <p>
