--- a/program/fasm/win32_keyboard.htm
+++ b/program/fasm/win32_keyboard.htm
@@ -203,7 +203,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" style="border:0px" src="../nasm/win32_keyboard/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_keyboard/1.jpg" class="maxSize">
 </p>
 
 <p>
