--- a/program/fasm/win32_timer.htm
+++ b/program/fasm/win32_timer.htm
@@ -193,7 +193,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" style="border:0px" src="../nasm/win32_timer/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_timer/1.jpg" class="maxSize">
 </p>
 
 <p>
