--- a/program.htm
+++ b/program.htm
@@ -827,9 +827,9 @@ Wine</h3>
             <a href="program/wine/cpp_pen.htm">
             Create Pen</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_line.htm">
-                Line</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_line.htm">
+            Draw Line</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_rectangle.htm">
