--- a/program.htm
+++ b/program.htm
@@ -452,6 +452,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_pen.htm">
             Create Pen</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_line.htm">
+            Draw Line</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
