MASM32 How to draw line.

--- a/program.htm
+++ b/program.htm
@@ -599,6 +599,10 @@ Set ScrollBar</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/pen.htm">
     Create Pen</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/line.htm">
+    Draw Line</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
