--- a/program.htm
+++ b/program.htm
@@ -671,6 +671,10 @@ hello, world!</a><br>
         <a href="program/hla/win32_pen.htm">
         Create Pen</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_line.htm">
+        Draw Line</a><br>
+
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
