--- a/program.htm
+++ b/program.htm
@@ -772,6 +772,10 @@ Flat Assembler (FASM)</h3>
             <a href="program/fasm/win32_pen.htm">
             Create Pen</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_line.htm">
+            Draw Line</a><br>
+
 <br><br><br><br>
 
 <div id="wine"></div>
