--- a/mcu/atmega32u4/setup.htm
+++ b/mcu/atmega32u4/setup.htm
@@ -44,16 +44,40 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATmega32U4</h3>
-<p><b>腳位</b></p>
+<h3>ATmega32U4 &gt;&gt; Arduino</h3>
+<p><b>開發環境</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://imgur.com/gallery/GDLuA2C">arduino</a><br><br>
+1. <a href="https://swf.com.tw/?p=1840">cubie</a><br>
+2. <a href="https://arduino.github.io/arduino-cli/0.31/installation/">arduino-cli</a><br><br>
 
-如下：<br>
-<img src="pinout/1.jpg" class="maxSize">
+如下：
 </p>
+<pre>
+$ cd
+$ wget https://downloads.arduino.cc/arduino-cli/arduino-cli_latest_Linux_64bit.tar.gz
+$ tar xvf arduino-cli_latest_Linux_64bit.tar.gz
+$ sudo mv arduino-cli /usr/local/bin/
+$ ./arduino-cli core install arduino:avr
+    Downloading packages...
+    arduino:avr-gcc@7.3.0-atmel3.6.1-arduino7 downloaded                                                      
+    arduino:avrdude@6.3.0-arduino17 downloaded                                                                
+    arduino:arduinoOTA@1.3.0 downloaded                                                                       
+    arduino:avr@1.8.6 downloaded                                                                              
+    Installing arduino:avr-gcc@7.3.0-atmel3.6.1-arduino7...
+    Configuring tool....
+    arduino:avr-gcc@7.3.0-atmel3.6.1-arduino7 installed
+    Installing arduino:avrdude@6.3.0-arduino17...
+    Configuring tool....
+    arduino:avrdude@6.3.0-arduino17 installed
+    Installing arduino:arduinoOTA@1.3.0...
+    Configuring tool....
+    arduino:arduinoOTA@1.3.0 installed
+    Installing platform arduino:avr@1.8.6...
+    Configuring platform....
+    Platform arduino:avr@1.8.6 installed
+</pre><br>
 
 <p>
 <br><a href="../../mcu.htm">返回上一頁</a>
