--- a/mcu/atmega328/led.htm
+++ b/mcu/atmega328/led.htm
@@ -50,7 +50,8 @@
 <p>
 參考資訊：<br>
 1. <a href="https://swf.com.tw/?p=1840">cubie</a><br>
-2. <a href="https://arduino.github.io/arduino-cli/0.31/installation/">arduino-cli</a><br><br>
+2. <a href="https://github.com/arduino/arduino-cli/issues/538">upload</a><br>
+3. <a href="https://arduino.github.io/arduino-cli/0.31/installation/">arduino-cli</a><br><br>
 
 步驟如下：<br>
 1. 連接ATmega328板子到PC<br>
