--- a/program.htm
+++ b/program.htm
@@ -851,9 +851,9 @@ Wine</h3>
             <a href="program/wine/cpp_line.htm">
             Draw Line</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_rectangle.htm">
-                Rectangle</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_rect.htm">
+            Draw Rectangle</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_ellipse.htm">
