--- a/program/wine/cpp_line.htm
+++ b/program/wine/cpp_line.htm
@@ -129,7 +129,7 @@ $ winegcc main.c -o main -lgdi32
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_line/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_line/1.jpg" class="maxSize">
 </p>
 
 <p>
