--- a/program.htm
+++ b/program.htm
@@ -456,6 +456,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_line.htm">
             Draw Line</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_rect.htm">
+            Draw Rectangle</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
