--- a/program.htm
+++ b/program.htm
@@ -517,6 +517,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_line.htm">
             Draw Line</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_rect.htm">
+            Draw Rectangle</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
