--- a/program.htm
+++ b/program.htm
@@ -611,6 +611,10 @@ Set ScrollBar</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/line.htm">
     Draw Line</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/rect.htm">
+    Draw Rectangle</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
