--- a/program.htm
+++ b/program.htm
@@ -687,6 +687,10 @@ hello, world!</a><br>
         <a href="program/hla/win32_line.htm">
         Draw Line</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_rect.htm">
+        Draw Rectangle</a><br>
+
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
