--- a/program.htm
+++ b/program.htm
@@ -792,6 +792,10 @@ Flat Assembler (FASM)</h3>
             <a href="program/fasm/win32_line.htm">
             Draw Line</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_rect.htm">
+            Draw Rectangle</a><br>
+
 <br><br><br><br>
 
 <div id="wine"></div>
