--- a/program.htm
+++ b/program.htm
@@ -875,9 +875,9 @@ Wine</h3>
             <a href="program/wine/cpp_rect.htm">
             Draw Rectangle</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_ellipse.htm">
-                Ellipse</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_ellipse.htm">
+            Draw Ellipse</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_polygon.htm">
