NASM How to draw ellipse.

--- a/program.htm
+++ b/program.htm
@@ -460,6 +460,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_rect.htm">
             Draw Rectangle</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_ellipse.htm">
+            Draw Ellipse</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
