NASMX How to draw ellipse.

--- a/program.htm
+++ b/program.htm
@@ -525,6 +525,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_rect.htm">
             Draw Rectangle</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_ellipse.htm">
+            Draw Ellipse</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
