MASM32 How to draw ellipse.

--- a/program.htm
+++ b/program.htm
@@ -623,6 +623,10 @@ Set ScrollBar</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/rect.htm">
     Draw Rectangle</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/ellipse.htm">
+    Draw Ellipse</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
