--- a/program.htm
+++ b/program.htm
@@ -703,6 +703,10 @@ hello, world!</a><br>
         <a href="program/hla/win32_rect.htm">
         Draw Rectangle</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_ellipse.htm">
+        Draw Ellipse</a><br>
+
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
