FASM How to draw ellipse.

--- a/program.htm
+++ b/program.htm
@@ -812,6 +812,10 @@ Flat Assembler (FASM)</h3>
             <a href="program/fasm/win32_rect.htm">
             Draw Rectangle</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_ellipse.htm">
+            Draw Ellipse</a><br>
+
 <br><br><br><br>
 
 <div id="wine"></div>
