Ghidra How to install the latest version.

--- a/reverse/ghidra/setup.htm
+++ b/reverse/ghidra/setup.htm
@@ -50,27 +50,33 @@
 <p>
 參考資訊：<br>
 1. <a href="https://www.cjavapy.com/article/90/">article</a><br>
-2. <a href="https://ghidra-sre.org/">ghidra-sre.org</a><br>
-3. <a href="https://www.oracle.com/java/technologies/javase-jdk11-downloads.html">javase-jdk11-downloads</a><br><br>
+2. <a href="https://www.cnblogs.com/shenyuanhaojie/p/15744357.html">cnblogs</a><br>
+3. <a href="https://adoptium.net/temurin/releases/">OpenJDK 17</a><br>
+4. <a href="https://ghidra-sre.org/">ghidra-sre.org</a><br><br>
 
-由NSA釋出的OpenSource Reversing Tool，果然人間自有真情在，目前已經開源在Github且更新速度頗快，看來IDA Pro真的要努力了，雖然使用Java當作開發語言，整體速度慢了一點，界面操作需要一些適應時間，不過作為開源逆向工具，後續發展相當值得注意，安裝過程如下：<br>
-1. Debian x64<br>
-2. 安裝OpenJDK 11
+由NSA釋出的OpenSource Reversing Tool，果然人間自有真情在，目前已經開源在Github且更新速度頗快，看來IDA Pro真的要努力了，雖然使用Java當作開發語言，整體速度慢了一點，界面操作需要一些適應時間，不過作為開源逆向工具，後續發展相當值得注意<br><br>
+
+安裝步驟(Debian x64)：<br>
+1. 下載<a href="https://adoptium.net/temurin/releases/">OpenJDK 17</a>
 </p>
 <pre>
-$ cd
-$ wget https://www.oracle.com/java/technologies/javase-jdk11-downloads.html#license-lightbox
-$ sudo dpkg -i jdk-11.0.7_linux-x64_bin.deb
+$ tar xvf OpenJDK17U-jdk_x64_linux_hotspot_17.0.6_10.tar.gz -C ~/
+
+$ export JAVA_HOME=~/jdk-17.0.6+10/
+$ export CLASSPATH=.:$JAVA_HOME/lib/tools.jar:$JAVA_HOME/lib/dt.jar
+$ export PATH=$JAVA_HOME/bin:$PATH
+
+$ javac --version
+    javac 17.0.6
 </pre><br>
-
 <p>
-3. 安裝Ghidra
+2. 安裝Ghidra
 </p>
 <pre>
 $ cd
-$ wget https://ghidra-sre.org/ghidra_9.1.2_PUBLIC_20200212.zip
-$ unzip ghidra_9.1.2_PUBLIC_20200212.zip
-$ cd ghidra_9.1.2_PUBLIC
+$ wget https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.2.3_build/ghidra_10.2.3_PUBLIC_20230208.zip
+$ unzip ghidra_10.2.3_PUBLIC_20230208.zip
+$ cd ghidra_10.2.3_PUBLIC
 $ ./ghidraRun
 </pre><br>
 
