IDA Pro How to diable local variables creation.

--- a/reverse.htm
+++ b/reverse.htm
@@ -218,24 +218,24 @@ IDA Pro</h3>
     Rebuild</a><br>
 
 &lowast;
-<a href="reverse/idapro/opcode.htm">
-如何顯示OPCode</a><br>
-
-&lowast;
 <a href="reverse/idapro/tracing.htm">
 Tracing function</a><br>
-
-&lowast;
-<a href="reverse/idapro/setup_v70.htm">
-安裝IDA Free v7.0</a><br>
 
 &lowast;
 <a href="reverse/idapro/patch_license_v73.htm">
 Patch License(v7.3)</a><br>
 
 &lowast;
+<a href="reverse/idapro/opcode.htm">
+如何顯示OPCode</a><br>
+
+&lowast;
 <a href="reverse/idapro/graph_overview_jpg.htm">
 如何輸出Graph overview</a><br>
+
+&lowast;
+<a href="reverse/idapro/local_var.htm">
+如何關閉Local Variable解析</a><br>
 <br><br><br><br>
 
 <div id="ghidra"></div>
