--- a/reverse/idapro/local_var.htm
+++ b/reverse/idapro/local_var.htm
@@ -45,30 +45,20 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>IDA Pro</h3>
-<p><b>安裝環境(v7.0)</b></p>
+<p><b>如何關閉Local Variable解析</b></p>
 <hr size="1">
 <p>
-步驟如下：
-</p>
-<pre>
-$ cd
-$ wget https://out7.hex-rays.com/files/idafree70_linux.run
-$ chmod 0777 idafree70_linux.run
-$ ./idafree70_linux.run
-</pre>
+Kernel options 1<br>
+<img src="local_var/1.jpg" class="maxSize"><br><br>
 
-<p>
-<img src="setup_v70/1.jpg" class="maxSize"><br>
-接著就點到結束即可<br><br>
+Create local variables<br>
+<img src="local_var/2.jpg" class="maxSize"><br><br>
 
-啟動IDA Pro
-</p>
+關閉前<br>
+<img src="local_var/3.jpg" class="maxSize"><br><br>
 
-<pre>
-$ ~/idafree-7.0/ida64
-</pre>
-<p>
-<img src="setup_v70/2.jpg" class="maxSize">
+關閉後<br>
+<img src="local_var/4.jpg" class="maxSize">
 </p>
 
 <p>
