IDA Pro How to expand all of functions.

--- a/reverse.htm
+++ b/reverse.htm
@@ -236,6 +236,10 @@ Patch License(v7.3)</a><br>
 &lowast;
 <a href="reverse/idapro/local_var.htm">
 如何關閉Local Variable解析</a><br>
+
+&lowast;
+<a href="reverse/idapro/auto_hide.htm">
+如何關閉Auto Hide Function功能</a><br>
 <br><br><br><br>
 
 <div id="ghidra"></div>
