--- a/program.htm
+++ b/program.htm
@@ -1040,60 +1040,45 @@ Wine</h3>
 MinGW</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="program/mingw/setup.htm">
-開發環境</a><br>
-
 &oplus;
 <b>C/C++</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    GUI<br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/wine/cpp_setup.htm">
+    開發環境</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/gui_hello.htm">
-        Hello, world!</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/gui_fix_hid.htm">
-        解決"undefined reference to HidD_GetHidGuid(_GUID*)@4"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/mingw/cpp_hello.htm">
+    Hello, world!</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Console<br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/mingw/enum_hid.htm">
+    Enumerate USB HID</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/cli_dll.htm">
-        DLL</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/mingw/urldownloadtofile.htm">
+    URLDownloadToFile</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/cli_usb_enum_hid.htm">
-        列舉HID裝置</a><br>
-    
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/cli_hello.htm">
-        Hello, world!</a><br>
+&lowast;
+<a href="program/mingw/inline_asm.htm">
+inline assembly</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/cli_inline_asm.htm">
-        inline assembly</a><br>
+&lowast;
+<a href="program/mingw/dll.htm">
+如何編譯成DLL</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/cli_urldownloadtofile.htm">
-        URLDownloadToFile</a><br>
+&lowast;
+<a href="program/mingw/tiny_pe.htm">
+如何編譯出最小Size的PE檔案</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/cli_tiny_pe.htm">
-        如何編譯出精簡的APP</a><br>
+&lowast;
+<a href="program/mingw/fix_junk.htm">
+解決"junk (%esp) after expression"問題</a><br>
 
-&oplus;
-<b>Assembly</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Console<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/fix_junk.htm">
-        解決"junk (%esp) after expression"問題</a><br>
+&lowast;
+<a href="program/mingw/fix_hid.htm">
+解決"undefined reference to HidD_GetHidGuid(_GUID*)@4"問題</a><br>
 
 &oplus;
 <b>OpenCV</b><br>
