--- a/program/mingw/dll.htm
+++ b/program/mingw/dll.htm
@@ -44,17 +44,27 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MinGW &gt;&gt; C/C++ &gt;&gt; Console</h3>
-<p><b>如何編譯出精簡的PE</b></p>
+<h3>MinGW</h3>
+<p><b>如何編譯成DLL</b></p>
 <hr size="1">
 <p>
-參考資訊：<br>
-1. <a href="https://stackoverflow.com/questions/42022132/how-to-create-tiny-pe-win32-executables-using-mingw">how-to-create-tiny-pe-win32-executables-using-mingw</a><br><br>
+main.c
+</p>
+<pre class="brush:cpp">
+#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
 
-參數如下：
+void __stdcall __declspec(dllexport) test(int x)
+{
+    printf("%d\n", x);
+}
+</pre><br>
+
+<p>
+編譯
 </p>
 <pre>
-$ i686-w64-mingw32-gcc -s -Os -fno-ident -fno-stack-protector -fomit-frame-pointer -fno-unwind-tables -fno-asynchronous-unwind-tables -falign-functions=1  -mpreferred-stack-boundary=2 -falign-jumps=1 -falign-loops=1 -mconsole -nostdlib -nodefaultlibs -nostartfiles -o main.exe main.c -lkernel32 -lmsvcrt
+$ i686-w64-mingw32-gcc -shared main.c -o main.dll
 </pre><br>
 
 <p>
