--- a/program/mingw/fix_junk.htm
+++ b/program/mingw/fix_junk.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MinGW &gt;&gt; Assembly &gt;&gt; Console</h3>
+<h3>MinGW</h3>
 <p><b>解決"junk (%esp) after expression"問題</b></p>
 <hr size="1">
 <p>
@@ -68,7 +68,7 @@
 </pre><br>
 
 <p>
-原本
+修改前
 </p>
 <pre class="brush:cpp">
 #include &lt;stdio.h&gt;
@@ -77,17 +77,17 @@
 
 int _main(int argc, char**argv)
 {
-  volatile char a, b, c;
+    volatile char a, b, c;
 
-  __asm__(
-    ".intel_syntax noprefix\n"
-    "push ax\n"
-  );
+    __asm__(
+        ".intel_syntax noprefix\n"
+        "push ax\n"
+    );
 
-  a = 8;
-  b = 9;
-  c = a * b;
-  printf("%d\n", c);
+    a = 8;
+    b = 9;
+    c = a * b;
+    printf("%d\n", c);
 }
 </pre><br>
 
@@ -101,18 +101,18 @@ int _main(int argc, char**argv)
 
 int _main(int argc, char**argv)
 {
-  volatile char a, b, c;
+    volatile char a, b, c;
 
-  __asm__(
-    ".intel_syntax noprefix\n"
-    "push ax\n"
-    ".att_syntax\n"
-  );
+    __asm__(
+        ".intel_syntax noprefix\n"
+        "push ax\n"
+        ".att_syntax\n"
+    );
 
-  a = 8;
-  b = 9;
-  c = a * b;
-  printf("%d\n", c);
+    a = 8;
+    b = 9;
+    c = a * b;
+    printf("%d\n", c);
 }
 </pre><br>
 
