--- a/program/mingw/cpp_hello.htm
+++ b/program/mingw/cpp_hello.htm
@@ -44,50 +44,42 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MinGW &gt;&gt; C/C++ &gt;&gt; Console</h3>
-<p><b>inline assembly</b></p>
+<h3>MinGW &gt;&gt; C/C++</h3>
+<p><b>Hello, world!</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://learn.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-messagebox">msdn</a><br>
+2. <a href="http://www.winprog.org/tutorial/start.html">start</a><br><br>
+
+經典的<b>Hello, world!</b>程式框架總是能夠讓人細心品味一款程式語言的美好，司徒就使用一個簡單的Message對話盒來展現<b>Hello, world!</b>框架<br><br>
+
 main.c
 </p>
 <pre class="brush:cpp">
-#include &lt;stdio.h&gt;
-#include &lt;stdlib.h&gt;
-#include &lt;stdint.h&gt;
- 
-int _main(int argc, char**argv)
+#include &lt;windows.h&gt;
+
+int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine, int nCmdShow)
 {
-  uint32_t a=0x11223344, b=0x55667788;
-
-  printf("before, a:0x%08x, b:0x%08x\n", a, b);
-  
-  __asm__(
-    ".intel_syntax noprefix\n"
-    "mov ecx, %[in_eax]\n"
-    "mov edx, %[in_ebx]\n"
-    "mov %[out_eax], edx\n"
-    "mov %[out_ebx], ecx\n"
-    ".att_syntax\n"
-    : [out_eax]"=r"(a), [out_ebx]"=r"(b)
-    : [in_eax]"r"(a), [in_ebx]"r"(b)
-    : "ecx", "edx"
-    );
-
-  printf("after, a:0x%08x, b:0x%08x\n", a, b);
-  return 0;
+    MessageBox(NULL, "Hello, world!", "main", MB_OK);
+    ExitProcess(0);
+    return 0;
 }
-</pre><br>
-
+</pre>
 <p>
-編譯
+<b>Line 1</b>：Header檔案<br>
+<b>Line 3</b>：程式進入點，WINAPI就是__stdcall的意思，代表Calling Convention是__stdcall<br>
+<b>Line 5</b>：顯示Message對話盒<br>
+<b>Line 6</b>：結束Process並且釋放相關資源<br><br>
+
+編譯、執行
 </p>
 <pre>
-$ i686-w64-mingw32-gcc -s -Os -fno-ident -fno-stack-protector -fomit-frame-pointer -fno-unwind-tables -fno-asynchronous-unwind-tables -falign-functions=1  -mpreferred-stack-boundary=2 -falign-jumps=1 -falign-loops=1 -mconsole -nostdlib -nodefaultlibs -nostartfiles -o main.exe main.c -lkernel32 -lmsvcrt
-</pre><br>
-
+$ i686-w64-mingw32-gcc -mwindows main.c -o main.exe
+$ wine ./main.exe
+</pre>
 <p>
-執行<br>
-<img src="cli_inline_asm/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_hello/1.jpg" class="maxSize">
 </p>
 
 <p>
