--- a/program/mingw/enum_hid.htm
+++ b/program/mingw/enum_hid.htm
@@ -44,69 +44,70 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MinGW &gt;&gt; C/C++ &gt;&gt; Console</h3>
-<p><b>列舉HID裝置</b></p>
+<h3>MinGW &gt;&gt; C/C++</h3>
+<p><b>Enumerate USB HID</b></p>
 <hr size="1">
 <p>
 main.cpp
 </p>
 <pre class="brush:cpp">
-#include &lt;windows.h&gt;
+#include &lt;stdint.h&gt;
 #include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
-#include &lt;stdint.h&gt;
+#include &lt;windows.h&gt;
 #include &lt;setupapi.h&gt;
 
 extern "C" {
-  #include &lt;hidsdi.h&gt;
+    #include &lt;hidsdi.h&gt;
 }
 
 int enum_hid(void)
 {
-  GUID hidGuid;
-  HANDLE hidHandle;
+    GUID hidGuid;
+    HANDLE hidHandle;
 
-  HidD_GetHidGuid(&amp;hidGuid);
-  HDEVINFO hDevInfo = SetupDiGetClassDevs(&amp;hidGuid, NULL, NULL, DIGCF_PRESENT | DIGCF_DEVICEINTERFACE);
-  if(hDevInfo == INVALID_HANDLE_VALUE){
-    printf("SetupDiGetClassDevs failed\n");
-    return 0;
-  }
-
-  int deviceNo = 0;
-  SP_DEVICE_INTERFACE_DATA devInfoData;
-  devInfoData.cbSize = sizeof(SP_DEVICE_INTERFACE_DATA);
-  SetLastError(NO_ERROR);
-  while(GetLastError() != ERROR_NO_MORE_ITEMS){
-    if(SetupDiEnumInterfaceDevice(hDevInfo, 0, &amp;hidGuid, deviceNo, &amp;devInfoData)){
-      printf("Index: %d\n", deviceNo);
-      ULONG requiredLength = 0;
-      SetupDiGetInterfaceDeviceDetail(hDevInfo, &amp;devInfoData, NULL, 0, &amp;requiredLength, NULL);
-      PSP_INTERFACE_DEVICE_DETAIL_DATA devDetail = (SP_INTERFACE_DEVICE_DETAIL_DATA*)malloc(requiredLength);
-      devDetail-&gt;cbSize = sizeof(SP_INTERFACE_DEVICE_DETAIL_DATA);
-      if(SetupDiGetInterfaceDeviceDetail(hDevInfo, &amp;devInfoData, devDetail, requiredLength, NULL, NULL)){
-        printf("Path: %s\n", devDetail-&gt;DevicePath);
-        hidHandle = CreateFile(devDetail-&gt;DevicePath, GENERIC_READ | GENERIC_WRITE, FILE_SHARE_READ | FILE_SHARE_WRITE, NULL, OPEN_EXISTING, 0, NULL);
-        if(hidHandle != INVALID_HANDLE_VALUE){
-          _HIDD_ATTRIBUTES hidAttributes;
-          if(HidD_GetAttributes(hidHandle, &amp;hidAttributes)){
-            printf("USB_VID:0x%04x, USB_PID:0x%04x\n", hidAttributes.VendorID, hidAttributes.ProductID);
-          }
-          CloseHandle(hidHandle);
-        }
-        free(devDetail);
-      }
-      deviceNo+= 1;
+    HidD_GetHidGuid(&amp;hidGuid);
+    HDEVINFO hDevInfo = SetupDiGetClassDevs(&amp;hidGuid, NULL, NULL, DIGCF_PRESENT | DIGCF_DEVICEINTERFACE);
+    if (hDevInfo == INVALID_HANDLE_VALUE) {
+        printf("failed to SetupDiGetClassDevs\n");
+        return 0;
     }
-  }
-  SetupDiDestroyDeviceInfoList(hDevInfo);
-  return 1;
+
+    int deviceNo = 0;
+    SP_DEVICE_INTERFACE_DATA devInfoData;
+    devInfoData.cbSize = sizeof(SP_DEVICE_INTERFACE_DATA);
+    SetLastError(NO_ERROR);
+    while (GetLastError() != ERROR_NO_MORE_ITEMS) {
+        if (SetupDiEnumInterfaceDevice(hDevInfo, 0, &amp;hidGuid, deviceNo, &amp;devInfoData)) {
+            printf("Index: %d\n", deviceNo);
+            ULONG requiredLength = 0;
+            SetupDiGetInterfaceDeviceDetail(hDevInfo, &amp;devInfoData, NULL, 0, &amp;requiredLength, NULL);
+            PSP_INTERFACE_DEVICE_DETAIL_DATA devDetail = (SP_INTERFACE_DEVICE_DETAIL_DATA *)malloc(requiredLength);
+            devDetail-&gt;cbSize = sizeof(SP_INTERFACE_DEVICE_DETAIL_DATA);
+            if (SetupDiGetInterfaceDeviceDetail(hDevInfo, &amp;devInfoData, devDetail, requiredLength, NULL, NULL)) {
+                printf("Path: %s\n", devDetail-&gt;DevicePath);
+                hidHandle = CreateFile(devDetail-&gt;DevicePath, 
+                    GENERIC_READ | GENERIC_WRITE, FILE_SHARE_READ | FILE_SHARE_WRITE, NULL, OPEN_EXISTING, 0, NULL);
+                if (hidHandle != INVALID_HANDLE_VALUE) {
+                    _HIDD_ATTRIBUTES hidAttributes;
+                    if (HidD_GetAttributes(hidHandle, &amp;hidAttributes)) {
+                        printf("USB_VID:0x%04x, USB_PID:0x%04x\n", hidAttributes.VendorID, hidAttributes.ProductID);
+                    }
+                    CloseHandle(hidHandle);
+                }
+                free(devDetail);
+            }
+            deviceNo += 1;
+        }
+    }
+    SetupDiDestroyDeviceInfoList(hDevInfo);
+    return 1;
 }
 
 int main(int argc, char **argv)
 {
-  enum_hid();
-  return 0;
+    enum_hid();
+    return 0;
 }
 </pre><br>
 
@@ -114,14 +115,14 @@ int main(int argc, char **argv)
 編譯步驟：
 </p>
 <pre>
-$ i686-w64-mingw32-g++ -o usbtest.exe main.cpp -lsetupapi -lhid -static -fpermissive
+$ i686-w64-mingw32-g++ -o main.exe main.cpp -lsetupapi -lhid -static -fpermissive
 </pre><br>
 
 <p>
 執行結果：
 </p>
 <pre>
-c:\&gt; usbtest.exe
+C:\&gt; main.exe
   Index: 0
   Path: \\?\hid#vid_16c0&amp;pid_0486&amp;mi_00#7&amp;259e7455&amp;0&amp;0000#{4d1e55b2-f16f-11cf-88cb-001111000030}
   USB_VID:0x16c0, USB_PID:0x0486
