--- a/program/mingw/tiny_pe.htm
+++ b/program/mingw/tiny_pe.htm
@@ -44,29 +44,25 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MinGW &gt;&gt; C/C++ &gt;&gt; GUI</h3>
-<p><b>解決"undefined reference to HidD_GetHidGuid(_GUID*)@4"問題</b></p>
+<h3>MinGW</h3>
+<p><b>如何編譯出最小Size的PE檔案</b></p>
 <hr size="1">
 <p>
-問題如下：
+參考資訊：<br>
+1. <a href="https://stackoverflow.com/questions/42022132/how-to-create-tiny-pe-win32-executables-using-mingw">how-to-create-tiny-pe-win32-executables-using-mingw</a><br><br>
+
+參數如下：
 </p>
 <pre>
-/tmp/ccwY1RCQ.o:main.cpp:(.text+0x25): undefined reference to `HidD_GetHidGuid(_GUID*)@4'
-/tmp/ccwY1RCQ.o:main.cpp:(.text+0x262): undefined reference to `HidD_GetAttributes(void*, _HIDD_ATTRIBUTES*)@8'
-collect2: error: ld returned 1 exit status
+$ i686-w64-mingw32-gcc \
+    -s -Os \
+    -fno-ident -fno-stack-protector -fomit-frame-pointer -fno-unwind-tables -fno-asynchronous-unwind-tables \
+    -falign-jumps=1 -falign-loops=1 -falign-functions=1 \
+    -mpreferred-stack-boundary=2 -mconsole \
+    -nostdlib -nodefaultlibs -nostartfiles \
+    -lkernel32 -lmsvcrt \
+    main.c -o main.exe
 </pre><br>
-
-<p>
-解法
-</p>
-<pre class="brush:cpp">
-extern "C"{
-  #include &lt;hidsdi.h&gt;
-}
-</pre>
-<p>
-P.S. LDFlags則需要加上<b>-lhid</b>
-</p>
 
 <p>
 <br><a href="../../program.htm">返回上一頁</a>
