--- a/program/mingw/fix_rdynamic.htm
+++ b/program/mingw/fix_rdynamic.htm
@@ -72,7 +72,7 @@ Run Build Command(s):/usr/bin/make cmTC_b9db5/fast &amp;&amp; /usr/bin/make  -f 
 <p>
 解法：
 </p>
-<pre class="brush:cpp">
+<pre>
 SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
 </pre><br>
 
