--- a/program/wine/cpp_setup.htm
+++ b/program/wine/cpp_setup.htm
@@ -49,9 +49,12 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://www.winehq.org/">winehq</a><br><br>
+1. <a href="https://www.winehq.org/">winehq</a><br>
+2. <a href="https://wiki.winehq.org/Winelib_User%27s_Guide">winelib</a><br><br>
 
-Wine除了可以用來跑Windows PE執行檔案(xxx.exe)之外，更可以用來編譯Win32 API程式，而使用的工具則是Winelib，Winelib其實就是Wine的工具、元件庫，工具包含winegcc、wrc等，winegcc是GCC Compiler，用來編譯程式碼，而wrc則是Resouce Compiler，可以用來編譯Resource檔案，所以編譯後的檔案格式是Linux ELF，接著可以透過Wine元件庫，如：gdi32.dll.so、user32.dll.so，執行編譯後的這個Linux ELF檔案，winegcc編譯後的檔案包含xxx.exe、xxx.exe.so兩個檔案，如下 ：
+Wine是Windows API層相容，但是並不是Binary層相容，因此，只能將Windows執行檔案(Intel x86/x64)，如：notepad.exe，在Linux(Intel x86/64)環境下執行，但是，無法在ARM平台下執行(ARM版本的Wine)，因為ARM不認得Intel x86/x64指令，所以無法執行，不過，可以透過模擬器方式執行，例如：使用box86、box64模擬器，然後再搭配Intel x86/64版本的Wine，去執行Windows執行檔案(Intel x86/x64)，不過這樣的執行方式就不是原生速度執行，而是使用模擬器方式執行<br><br>
+
+在Intel x86/x64平台下，Wine除了可以用來跑Windows PE執行檔案(xxx.exe)之外，更可以用來編譯Win32 API程式，而使用的工具則是Winelib，Winelib其實就是Wine的工具、元件庫，工具包含winegcc、wrc等，winegcc是GCC Compiler，用來編譯程式碼，而wrc則是Resouce Compiler，可以用來編譯Resource檔案，所以編譯後的檔案格式是Linux ELF，然後可以透過Wine元件庫，如：gdi32.dll.so、user32.dll.so，執行編譯後的這個Linux ELF檔案，winegcc編譯後的檔案包含xxx.exe、xxx.exe.so兩個檔案，如下 ：
 </p>
 <pre>
 $ winegcc main.c -o main.exe
